--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ html, body {
   height: 100%;
   padding: 10px; }
 
+#widget {
+  width: 100%;
+  height: 100%; }
+
 #layout {
   position: absolute;
   top: 0;
@@ -20,11 +24,15 @@ html, body {
   width: 60%;
   margin: 4% 0;
   height: 68%; }
+  @media (max-width: 768px) {
+    #layout {
+      width: 80%;
+      left: 10%; } }
   @media (max-width: 480px) {
     #layout {
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 80%;
       margin: 0;
       padding-bottom: 30px; }
       #layout .btn {
@@ -45,6 +53,22 @@ html, body {
       border-radius: 0;
       box-shadow: none; } }
 
+#description {
+  margin-top: 50px; }
+  @media (max-width: 480px) {
+    #description {
+      margin: 50px 20px 0; }
+      #description h2 {
+        font-size: 1.7em;
+        font-weight: 900; }
+      #description h3 {
+        font-size: 1.3em;
+        font-weight: 900; } }
+
+#demopanel {
+  width: 100%;
+  height: 100%; }
+
 #color {
   margin-bottom: 3px; }
   @media (max-width: 480px) {
@@ -57,6 +81,20 @@ html, body {
 #title img {
   height: 16px;
   width: 16px; }
+
+#sample-doc {
+  width: 100%;
+  height: 300px; }
+
+#result {
+  border: none;
+  background: #eee;
+  width: 100%;
+  height: 400px; }
+
+#footer {
+  width: 100%;
+  height: 200px; }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important; }
