--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,58 +18,93 @@ html(lang="en")
     script(type="text/javascript",src="index.js")
     script(src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places")
   body
-    #content
-      #layout(ng-app="0media.events",ng-controller="0media.events.main")
-        #color.form-group
-          span.pull-right
-            .btn.btn-primary.btn-sm(ng-click="setStyle('default')") 預設
-            .btn.btn-default.btn-sm(ng-click="setStyle('gray')") 亮灰
-            .btn.btn-success.btn-sm(ng-click="setStyle('green')") 淺綠
-          #title.btn-sm.pull-left: strong 
-            img(src="img/favicon.png")
-            |  事件數據視覺化
+    #content(ng-app="main",ng-controller="main")
+      #layout
+        #demopanel(ng-app="0media.events",ng-controller="0media.events.main")
+          #color.form-group
+            span.pull-right
+              .btn.btn-primary.btn-sm(ng-click="setStyle('default')") 預設
+              .btn.btn-default.btn-sm(ng-click="setStyle('gray')") 亮灰
+              .btn.btn-success.btn-sm(ng-click="setStyle('green')") 淺綠
+            #title.btn-sm.pull-left: strong 
+              img(src="img/favicon.png")
+              |  事件數據視覺化
+            .clearfix
+          #main: #zm-event.default(ng-class="[style,loaded,dim.htype,dim.wtype]")
+            .dimmer
+              img(src="img/spin.gif")
+              br
+              br
+              | Preparing the timeline
+            .timeline: .timeline-inner
+              .header
+                .name {{current.name}}
+                .casualty {{current.casualty.die}}死 {{current.casualty.hurt}}傷
+              .background
+              .line-wrap: .line
+              .events: .events-inner(ng-attr-style="top:{{events.top}}px",ng-class="{'spd1':speed==1,'spd2':speed==2,'spd3':speed==3}")
+                .event(ng-repeat="event in events",
+                    ng-attr-style="top:{{event.top}}px;opacity:{{event.fadeout}}",
+                    ng-class="{'top':event.first}")
+                  .circle(ng-class="{'xl':event.casualty.total>2000,'lg':event.casualty.total<2000 && event.casualty.total>500}")
+                  .desc
+                    .data {{event.date}}
+                    .name(ng-attr-style="opacity:{{event.opacity}}") {{event.name}}
+            .ctrlpanel
+              i.glyphicon.glyphicon-fast-backward(ng-click="reset()")
+              i.glyphicon.glyphicon-play(ng-click="play()",ng-show="state!=1")
+              i.glyphicon.glyphicon-pause(ng-click="pause()",ng-show="state!=0")
+              i.glyphicon.speed(ng-click="speeding()") {{speed}}X
+              .pull-right
+                i.glyphicon.glyphicon-chevron-up(ng-click="step(-1)",ng-class="{'active':dir==-1}")
+                i.glyphicon.glyphicon-chevron-down(ng-click="step(1)",ng-class="{'active':dir==1}")
+            .eventmap
+            .bubbles
+              .bubble(ng-repeat="event in events",ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}",ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}") 
+            .infopanel
+              .pull-right: i.glyphicon.glyphicon-share
+              .date.pull-left(ng-cloak) {{current.date}}
+              .title(ng-cloak) {{current.name}}
+              .casualty.pull-right
+                .c-die(ng-cloak)
+                  | {{current.casualty.die}}
+                  small 死
+                .c-hurt(ng-cloak)
+                  | {{current.casualty.hurt}}
+                  small 傷
+        #description
+          hr
+          h2 Events Visualization
+          p This tool helps you visualize events across time, using bubble to show the magnitude of specific event.
+          hr
+          h3 How to Use
+          p You need to put the event data in google spreadsheet formatted like this one:
+          iframe#sample-doc(src="https://docs.google.com/spreadsheets/d/1p0DNKBt4oNfDBgHv4ZXH-vu0bJ_PtxFFXCL7o4O_Cxo/pubhtml?widget=true&amp;headers=false")
+          br
+          br
+          p 
+            | Then, in the menu bar of the desired spreadsheet, click 
+            em Menu  
+            | &#xbb; 
+            em Publish to the Web 
+            | &#xbb;  
+            em Publish
+            | to make it public to anyone.
+          p 
+            | Copy &amp; paste the link of the spreadsheet in this input box:
+          .form-group
+            input.form-control(
+              placeholder="e.g., https://docs.google.com/spreadsheets/d/1p0DNKBt4oNfDBgHv4ZXH-vu0bJ_PtxFFXCL7o4O_Cxo/pubhtml",
+              ng-model="datasrc")
+          p and choose one colorschema:
+          .form-group
+            .btn-group
+              .btn.btn-primary.btn-sm(ng-click="setStyle('default')",ng-class="{'active':style=='default'}") Default
+              .btn.btn-default.btn-sm(ng-click="setStyle('gray')",ng-class="{'active':style=='gray'}") Gray
+              .btn.btn-success.btn-sm(ng-click="setStyle('green')",ng-class="{'active':style=='green'}") Green
+          p sample output will be like this:
+          iframe#result(ng-attr-src="{{outurl}}")
+          p and here is the html code for embedding this in websites:
+          textarea.form-control(ng-model="embedcode",rows="5")
 
-          .clearfix
-        #main: #zm-event.default(ng-class="[style,loaded,dim.htype,dim.wtype]")
-          .dimmer
-            img(src="img/spin.gif")
-            br
-            br
-            | 準備時間軸
-          .timeline: .timeline-inner
-            .header
-              .name {{current.name}}
-              .casualty {{current.casualty.die}}死 {{current.casualty.hurt}}傷
-            .background
-            .line-wrap: .line
-            .events: .events-inner(ng-attr-style="top:{{events.top}}px",ng-class="{'spd1':speed==1,'spd2':speed==2,'spd3':speed==3}")
-              .event(ng-repeat="event in events",
-                  ng-attr-style="top:{{event.top}}px;opacity:{{event.fadeout}}",
-                  ng-class="{'top':event.first}")
-                .circle(ng-class="{'xl':event.casualty.total>2000,'lg':event.casualty.total<2000 && event.casualty.total>500}")
-                .desc
-                  .data {{event.date}}
-                  .name(ng-attr-style="opacity:{{event.opacity}}") {{event.name}}
-
-          .ctrlpanel
-            i.glyphicon.glyphicon-fast-backward(ng-click="reset()")
-            i.glyphicon.glyphicon-play(ng-click="play()",ng-show="state!=1")
-            i.glyphicon.glyphicon-pause(ng-click="pause()",ng-show="state!=0")
-            i.glyphicon.speed(ng-click="speeding()") {{speed}}X
-            .pull-right
-              i.glyphicon.glyphicon-chevron-up(ng-click="step(-1)",ng-class="{'active':dir==-1}")
-              i.glyphicon.glyphicon-chevron-down(ng-click="step(1)",ng-class="{'active':dir==1}")
-          .eventmap
-          .bubbles
-            .bubble(ng-repeat="event in events",ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}",ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}") 
-          .infopanel
-            .pull-right: i.glyphicon.glyphicon-share
-            .date.pull-left(ng-cloak) {{current.date}}
-            .title(ng-cloak) {{current.name}}
-            .casualty.pull-right
-              .c-die(ng-cloak)
-                | {{current.casualty.die}}
-                small 死
-              .c-hurt(ng-cloak)
-                | {{current.casualty.hurt}}
-                small 傷
+          #footer
