--- a/src/jade/library.jade
+++ b/src/jade/library.jade
@@ -4,6 +4,9 @@ if useog
     meta(property="og:image:type",content="image/png")
     meta(property="og:image:width",content="200")
     meta(property="og:image:height",content="200")
+    meta(property="og:title",content="事件數據視覺化")
+    meta(property="og:description",content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.")
+
 if usecdn
   //- from cdn
   if lib.jquery
