--- a/src/jade/library.jade
+++ b/src/jade/library.jade
@@ -6,7 +6,7 @@ if useog
     meta(property="og:image:height",content="200")
     meta(property="og:url",content="http://zbryikt.github.io/geoevent/")
     meta(property="og:type",content="website")
-    meta(property="og:title",content="事件數據視覺化")
+    meta(property="og:title",content="Events Visualization")
     meta(property="og:description",content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.")
 
 if usecdn
