--- a/src/jade/widget/index.jade
+++ b/src/jade/widget/index.jade
@@ -9,7 +9,7 @@ html(lang="en")
   head(prefix="og: http://ogp.me/ns#")
     meta(charset="utf-8")
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title 事件數據視覺化
+    title Events Visualization
     // libraries
     include ../library.jade
     // custom files
