--- a/src/sass/vars.sass
+++ b/src/sass/vars.sass
@@ -1,5 +1,5 @@
 $dim: mc, xs, sm, md, lg
-$order: eventmap main bubble timeline timeline-bk timeline-title timeline-line timeline-event timeline-circle infotext ctrlpanel subtitle
+$order: eventmap main bubble timeline timeline-bk timeline-title timeline-line timeline-event timeline-circle infotext ctrlpanel subtitle popover
 
 $xs: 'max-width: 480px'
 $sm: 'max-width: 768px'
