--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -28,7 +28,7 @@ html(lang="en")
               .btn.btn-success.btn-sm(ng-click="setStyle('green')") 淺綠
             #title.btn-sm.pull-left: strong 
               img(src="img/favicon.png")
-              |  Events Visualization
+              |  Events Visualization 
             .clearfix
           #main: #zm-event.default(ng-class="[style,loaded,dim.htype,dim.wtype]")
             .dimmer
@@ -74,6 +74,7 @@ html(lang="en")
                   small 傷
         #description
           hr
+          .fb-like.pull-right(data-share="false",data-show-faces="false",data-layout="button_count")
           h2 Events Visualization
           p This tool helps you visualize events across time, using bubble to show the magnitude of specific event.
           hr
@@ -121,3 +122,27 @@ html(lang="en")
           input.form-control(ng-model="outurlwithhost",ng-disabled="true")
 
           #footer
+
+    script.
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '415494205294101',
+          xfbml      : true,
+          version    : 'v2.2'
+        });
+      };
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-54066900-1', 'auto');
+      ga('send', 'pageview');
