--- a/src/jade/widget/index.jade
+++ b/src/jade/widget/index.jade
@@ -51,8 +51,9 @@ html(lang="en")
         .eventmap
         .bubbles
           .bubble(ng-repeat="event in events",ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}",ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}") 
+        .home-popover(onclick="window.location.href='http://zbryikt.github.io/geoevent/'") build your own map!
         .infopanel
-          .pull-right: i.glyphicon.glyphicon-share
+          .pull-right: i.glyphicon.glyphicon-home(onclick="window.location.href='http://zbryikt.github.io/geoevent/'")
           .date.pull-left(ng-cloak) {{current.date}}
           .title(ng-cloak) {{current.name}}
           .casualty.pull-right
@@ -62,3 +63,10 @@ html(lang="en")
             .c-hurt(ng-cloak)
               | {{current.casualty.hurt}}
               small 傷
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-54066900-1', 'auto');
+      ga('send', 'pageview');
