--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ html, body {
 
 #footer {
   width: 100%;
-  height: 200px; }
+  min-height: 100px; }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important; }
