--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -115,7 +115,7 @@ html(lang="en")
                 .btn.btn-primary.btn-sm(ng-click="setRatio(20)",ng-class="{'active':ratio==20}") Large
           br
           p sample output will be like this:
-          iframe#result(ng-attr-src="{{outurl}}")
+          iframe#result(ng-attr-src="{{outurlwithhost}}")
           p here is the html code for embedding this in websites:
           textarea.form-control(ng-model="embedcode",rows="5")
           p or the direct link to the result page:
