--- a/src/sass/zm-event.sass
+++ b/src/sass/zm-event.sass
@@ -20,6 +20,7 @@
     top: 0
     left: 0
     width: 220px
+    @include no-selection
   .timeline-inner
     position: relative
     border-radius: 5px
