--- a/src/jade/widget/index.jade
+++ b/src/jade/widget/index.jade
@@ -17,52 +17,10 @@ html(lang="en")
     link(rel="icon",type="image/x-icon",href="../img/favicon.png")
     script(type="text/javascript",src="../index.js")
     script(src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places")
-  body
+  body(style="overflow:hidden")
     #widget(ng-app="0media.events",ng-controller="0media.events.main")
-      #zm-event.default(ng-class="[style,loaded,dim.htype,dim.wtype]")
-        .dimmer
-          img(src="../img/spin.gif")
-          br
-          br
-          | Preparing the timeline
-        .timeline: .timeline-inner
-          .header
-            .name {{current.name}}
-            .casualty {{current.casualty.die}}死 {{current.casualty.hurt}}傷
-          .background
-          .line-wrap: .line
-          .events: .events-inner(ng-attr-style="top:{{events.top}}px",ng-class="{'spd1':speed==1,'spd2':speed==2,'spd3':speed==3}")
-            .event(ng-repeat="event in events",
-                ng-attr-style="top:{{event.top}}px;opacity:{{event.fadeout}}",
-                ng-class="{'top':event.first}")
-              .circle(ng-class="{'xl':event.casualty.total>2000,'lg':event.casualty.total<2000 && event.casualty.total>500}")
-              .desc
-                .data {{event.date}}
-                .name(ng-attr-style="opacity:{{event.opacity}}") {{event.name}}
+      include ../widget.jade
 
-        .ctrlpanel
-          i.glyphicon.glyphicon-fast-backward(ng-click="reset()")
-          i.glyphicon.glyphicon-play(ng-click="play()",ng-show="state==0")
-          i.glyphicon.glyphicon-pause(ng-click="pause()",ng-show="state!=0")
-          i.glyphicon.speed(ng-click="speeding()") {{speed}}X
-          .pull-right
-            i.glyphicon.glyphicon-chevron-up(ng-click="step(-1)",ng-class="{'active':dir==-1}")
-            i.glyphicon.glyphicon-chevron-down(ng-click="step(1)",ng-class="{'active':dir==1}")
-        .eventmap
-        .bubbles
-          .bubble(ng-repeat="event in events",ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}",ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}") 
-        .home-popover(onclick="window.location.href='http://zbryikt.github.io/geoevent/'") build your own map!
-        .infopanel
-          .pull-right: i.glyphicon.glyphicon-home(onclick="window.location.href='http://zbryikt.github.io/geoevent/'")
-          .date.pull-left(ng-cloak) {{current.date}}
-          .title(ng-cloak) {{current.name}}
-          .casualty.pull-right
-            .c-die(ng-cloak)
-              | {{current.casualty.die}}
-              small 死
-            .c-hurt(ng-cloak)
-              | {{current.casualty.hurt}}
-              small 傷
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
