--- a/src/sass/style/green.sass
+++ b/src/sass/style/green.sass
@@ -6,6 +6,8 @@
   .infopanel
     background: #0ea688
     color: #fff
+    .action a
+      color: #ff9
 
   .ctrlpanel
     background: rgba(14,166,136,0.9)
