--- a/src/sass/zm-event.sass
+++ b/src/sass/zm-event.sass
@@ -171,7 +171,9 @@
     @include no-selection
     .glyphicon
       cursor: pointer
-
+    .action
+      position: relative
+      z-index: index($order, action)
   .infopanel
     .title
       position: absolute
