--- a/src/sass/style/gray.sass
+++ b/src/sass/style/gray.sass
@@ -7,6 +7,8 @@
     background: rgba(255,255,255,0.9)
     color: #444
     text-shadow: none
+    .action a
+      color: #999
 
   .ctrlpanel
     background: rgba(255,255,255,0.9)
