update spin gif path

--- a/src/jade/widget.jade
+++ b/src/jade/widget.jade
@@ -1,7 +1,7 @@
 //-#widget(ng-app="0media.events",ng-controller="0media.events.main")
 #zm-event.default(ng-class="[style,loaded,dim.htype,dim.wtype]")
   .dimmer
-    img(src="../img/spin.gif")
+    img(src="img/spin.gif")
     br
     br
     | Preparing the timeline
